manifests/authentik/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:latest
          ports:
            - containerPort: 9000
