manifests/authentik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
spec:
  selector:
    app: authentik
  ports:
    - port: 80
      targetPort: 9000
